--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,7 +146,6 @@ allow 154.26.159.157;
 allow 154.53.58.161;
 allow 154.65.97.191;
 allow 154.90.54.69;
-allow 157.90.92.35;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -194,7 +193,6 @@ allow 173.224.219.236;
 allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
@@ -214,6 +212,7 @@ allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.155;
+allow 178.175.148.209;
 allow 178.175.148.246;
 allow 178.17.58.159;
 allow 178.20.55.16;
@@ -1156,6 +1155,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1368,6 +1368,7 @@ allow 2a0d:bbc7::f816:3eff:fe84:8a9e;
 allow 2a0d:bbc7::f816:3eff:fec7:9bc8;
 allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
+allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
@@ -1622,6 +1623,7 @@ allow 45.84.107.172;
 allow 45.84.107.174;
 allow 45.84.107.182;
 allow 45.84.107.198;
+allow 45.84.107.200;
 allow 45.84.107.222;
 allow 45.84.107.33;
 allow 45.84.107.47;
@@ -1665,6 +1667,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1749,6 +1752,9 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
 allow 82.118.248.205;
+allow 82.153.138.184;
+allow 82.153.138.241;
+allow 82.153.138.7;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1820,6 +1826,8 @@ allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
+allow 94.156.152.234;
+allow 94.156.152.8;
 allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
