--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -375,6 +375,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -587,6 +588,7 @@ deny 2a0d:bbc7::f816:3eff:fe84:8a9e;
 deny 2a0d:bbc7::f816:3eff:fec7:9bc8;
 deny 2a0d:bbc7::f816:3eff:fee6:ca14;
 deny 2a0d:bbc7::f816:3eff:fee9:3e45;
+deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
