--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -146,7 +146,6 @@ set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.53.58.161;
 set_real_ip_from 154.65.97.191;
 set_real_ip_from 154.90.54.69;
-set_real_ip_from 157.90.92.35;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 160.187.148.71;
 set_real_ip_from 161.129.68.162;
@@ -194,7 +193,6 @@ set_real_ip_from 173.224.219.236;
 set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
@@ -214,6 +212,7 @@ set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.148.155;
+set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.246;
 set_real_ip_from 178.17.58.159;
 set_real_ip_from 178.20.55.16;
@@ -1156,6 +1155,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1368,6 +1368,7 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fe84:8a9e;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fec7:9bc8;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fee6:ca14;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
+set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
@@ -1622,6 +1623,7 @@ set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.174;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
+set_real_ip_from 45.84.107.200;
 set_real_ip_from 45.84.107.222;
 set_real_ip_from 45.84.107.33;
 set_real_ip_from 45.84.107.47;
@@ -1665,6 +1667,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1749,6 +1752,9 @@ set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 82.118.248.205;
+set_real_ip_from 82.153.138.184;
+set_real_ip_from 82.153.138.241;
+set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
@@ -1820,6 +1826,8 @@ set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
+set_real_ip_from 94.156.152.234;
+set_real_ip_from 94.156.152.8;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
