--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -42,7 +42,6 @@ allow 107.174.146.25;
 allow 107.175.93.157;
 allow 107.189.10.175;
 allow 107.189.11.111;
-allow 107.189.1.16;
 allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.12.3;
@@ -385,6 +384,8 @@ allow 185.220.101.22;
 allow 185.220.101.23;
 allow 185.220.101.24;
 allow 185.220.101.25;
+allow 185.220.101.26;
+allow 185.220.101.27;
 allow 185.220.101.28;
 allow 185.220.101.29;
 allow 185.220.101.3;
@@ -858,7 +859,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -1154,6 +1154,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1165,6 +1166,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
@@ -1303,10 +1305,12 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
+allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
+allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
 allow 2a0b:f4c2::3;
@@ -1646,6 +1650,7 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 45.95.233.104;
+allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1665,6 +1670,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1749,9 +1755,6 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
 allow 82.118.248.205;
-allow 82.153.138.184;
-allow 82.153.138.241;
-allow 82.153.138.7;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1761,6 +1764,7 @@ allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.239.46.144;
