--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -42,7 +42,6 @@ deny 107.174.146.25;
 deny 107.175.93.157;
 deny 107.189.10.175;
 deny 107.189.11.111;
-deny 107.189.1.16;
 deny 107.189.1.160;
 deny 107.189.1.175;
 deny 107.189.12.3;
@@ -385,6 +384,8 @@ deny 185.220.101.22;
 deny 185.220.101.23;
 deny 185.220.101.24;
 deny 185.220.101.25;
+deny 185.220.101.26;
+deny 185.220.101.27;
 deny 185.220.101.28;
 deny 185.220.101.29;
 deny 185.220.101.3;
@@ -858,7 +859,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -1154,6 +1154,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1165,6 +1166,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
@@ -1303,10 +1305,12 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
+deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
@@ -1646,6 +1650,7 @@ deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.252;
 deny 45.95.233.104;
+deny 46.165.193.216;
 deny 46.165.243.36;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1665,6 +1670,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1749,9 +1755,6 @@ deny 81.16.33.42;
 deny 81.17.28.95;
 deny 81.181.104.22;
 deny 82.118.248.205;
-deny 82.153.138.184;
-deny 82.153.138.241;
-deny 82.153.138.7;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
@@ -1761,6 +1764,7 @@ deny 82.221.139.190;
 deny 82.29.128.145;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.239.46.144;
