--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -142,6 +142,7 @@ allow 152.53.184.161;
 allow 152.53.210.165;
 allow 152.53.48.80;
 allow 152.53.53.243;
+allow 154.205.129.174;
 allow 154.26.159.157;
 allow 154.53.58.161;
 allow 154.65.97.191;
@@ -859,6 +860,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -915,7 +917,7 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa59:5:915::1;
-allow 2602:fa86:b1:0:7c26:daab:e286:3c5d;
+allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
 allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
@@ -1603,6 +1605,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.153;
 allow 45.58.190.74;
+allow 45.61.184.51;
 allow 45.61.185.172;
 allow 45.61.188.15;
 allow 45.66.35.20;
