--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -142,6 +142,7 @@ allow 152.53.184.161;
 allow 152.53.210.165;
 allow 152.53.48.80;
 allow 152.53.53.243;
+allow 154.205.129.174;
 allow 154.26.159.157;
 allow 154.53.58.161;
 allow 154.65.97.191;
@@ -750,6 +751,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -873,6 +875,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.153;
 allow 45.58.190.74;
+allow 45.61.184.51;
 allow 45.61.185.172;
 allow 45.61.188.15;
 allow 45.66.35.20;
