--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -138,7 +138,7 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa59:5:915::1;
-allow 2602:fa86:b1:0:7c26:daab:e286:3c5d;
+allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
 allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
