--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -142,6 +142,7 @@ deny 152.53.184.161;
 deny 152.53.210.165;
 deny 152.53.48.80;
 deny 152.53.53.243;
+deny 154.205.129.174;
 deny 154.26.159.157;
 deny 154.53.58.161;
 deny 154.65.97.191;
@@ -859,6 +860,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -915,7 +917,7 @@ deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
 deny 2602:fa59:5:915::1;
-deny 2602:fa86:b1:0:7c26:daab:e286:3c5d;
+deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fb54:1400::1d;
 deny 2602:fc24:10:bb36::1;
@@ -1603,6 +1605,7 @@ deny 45.148.10.111;
 deny 45.154.98.33;
 deny 45.38.20.153;
 deny 45.58.190.74;
+deny 45.61.184.51;
 deny 45.61.185.172;
 deny 45.61.188.15;
 deny 45.66.35.20;
