--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -271,7 +271,6 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.129.62.64;
 set_real_ip_from 185.130.47.58;
-set_real_ip_from 185.132.53.107;
 set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.132.53.188;
 set_real_ip_from 185.132.53.88;
@@ -592,7 +591,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
-set_real_ip_from 198.167.206.142;
+set_real_ip_from 198.167.206.169;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -1155,12 +1154,12 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:115:df08::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
+set_real_ip_from 2a04:52c0:118:eb6a::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1506,7 +1505,6 @@ set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
 set_real_ip_from 2a14:c380:50:60::a;
-set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.133.0.235;
@@ -1559,6 +1557,7 @@ set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.73.14;
 set_real_ip_from 45.133.73.63;
+set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.201.26;
 set_real_ip_from 45.137.201.31;
@@ -1603,6 +1602,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.58.190.74;
+set_real_ip_from 45.61.184.51;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.188.15;
 set_real_ip_from 45.66.35.20;
@@ -1670,13 +1670,13 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.110.120;
 set_real_ip_from 5.255.111.64;
+set_real_ip_from 5.255.113.177;
 set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
